# jump-mouse

./: .gitignore  BUILD_GUIDE.md  C++20_vs_C++23_vs_C++26_完整对比.md  CMakeLists.txt  CODE_REVIEW.md  DESIGN_DOC.md  ISSUES.md  README.md  RESEARCH_WIN10_CURSOR.md  config.json  运行情况.txt
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: Build_Guide.md  CODE_REVIEW.md  Code_Review.md  DESIGN_DOC.md  Design_Doc.md  English_Manual.md  ISSUES.md  Issues.md  README_zh-CN.md  代码审查.md  已知问题.md  编译指南.md  设计文档.md
src/: daemon.rc  dpi_aware.manifest  mouse_focus.rc  resource.h
src/common/: adaptation_layer.cpp  adaptation_layer.h  config_manager.cpp  config_manager.h  json_util.h  logger.h
src/config_tool/: config_dialog.cpp  config_dialog.h  config_main.cpp  daemon_controller.cpp  daemon_controller.h
src/daemon/: application.cpp  application.h  daemon_main.cpp  focus_monitor.cpp  focus_monitor.h  key_tracker.cpp  key_tracker.h  mouse_controller.cpp  mouse_controller.h  trigger_detector.cpp  trigger_detector.h
src/test/: test_harness.cpp
